# ProPIP

./: .gitignore  AUTHORS.txt  CMakeCache.txt  CMakeLists.txt  CREDITS.txt  CTestTestfile.cmake  Castor.cbp  DartConfiguration.tcl  Makefile  ProPIP.WARNING  README.md  bitbucket-pipelines.yml  cmake_install.cmake
ProPIP.wiki/: Home.md  Home_old.md  ProPIP-Progressive-Multiple-Sequence-Alignment-with-Poisson-Indel-Process.md  Roadmap.md
ProPIP.wiki/Compiling/: Compilers_info.md  Compiling_aws.md  Compiling_localenv.md  Compiling_sharedenv.md  Index.md  Preparing_system.md  Updating.md
ProPIP.wiki/Developers/: Development_RepositoryGuidelines.md  Index.md
ProPIP.wiki/Examples/: Index.md  OLD_Index.md
ProPIP.wiki/Features/: Alignment.md  Alphabet.md  Index.md  Input.md  Logging.md  Optimisations.md  Output.md  Substitution_model.md  Tree.md
ProPIP.wiki/Features/Optimisation/: Optimisation_NumericalParameters.md  Optimisation_Topology.md
ProPIP.wiki/archive/: Home.md
data/: MSA_all_combinations_10_leaves.fa  MSA_all_combinations_8_leaves.fa  MSA_all_combinations_of_gaps_5_leaves.fa  MSA_fullA_5.fa  dna_10.fa  dna_13.fa  dna_5.fa  dna_64.fa  dna_8.fa  tree_10_leaves_r_bl.nwk  tree_13_leaves_r_bl.nwk  tree_5_leaves_empty.nwk  tree_64_leaves.nwk  tree_64_leaves_unbalanced.nwk  tree_8_leaves_r_balanced.nwk  tree_8_leaves_r_bl.nwk
data/input/: dna_5.fa  tree_5_leaves_r_bl.nwk  unaligned_dna_5.fa
data/output/: aligner.JC69+PIP.out.align.initial.fasta  aligner.JC69+PIP.out.estimates.json
docker_conf/: Docker.md  Dockerfile
include/: CastorApplication.hpp  CompositePIPmsa.hpp  CompositePIPnode.hpp  CompositePIPnodeTBB.hpp  DistanceFactory.hpp  DistanceFactoryAlign.hpp  DistanceFactoryAngle.hpp  DistanceFactoryML.hpp  DistanceFactoryPrealigned.hpp  ExtendedAlphabet.hpp  FactoryPIPnode.hpp  FactoryPIPnodeCPU.hpp  FactoryPIPnodeRAM.hpp  FactoryPIPnodeSB.hpp  FactoryPIPnodeTBB.hpp  Horner.h  LambertW.h  Move.hpp  Optimizators.hpp  PIP.hpp  PIPlkData.hpp  PIPmsa.hpp  PIPnode.hpp  RHomogeneousTreeLikelihood_Generic.hpp  RHomogeneousTreeLikelihood_PIP.hpp  SupportMeasures.hpp  TreeRearrangment.hpp  TreeSearch.hpp  UnifiedDistanceEstimation.hpp  UnifiedPhylogeneticTools.hpp  UnifiedTSHSearchable.hpp  UnifiedTSHTopologySearch.hpp  UnifiedTSHomogeneousTreeLikelihood_Generic.hpp  UnifiedTSHomogeneousTreeLikelihood_PIP.hpp  Utilities.hpp  Utils.hpp  Utree.hpp  Version.hpp  inference_indel_rates.hpp  pPIP.hpp  (+1 more)
src/: CastorApplication.cpp  CompositePIPnode.cpp  DistanceFactory.cpp  DistanceFactoryAlign.cpp  DistanceFactoryAngle.cpp  DistanceFactoryML.cpp  DistanceFactoryPrealigned.cpp  ExtendedAlphabet.cpp  FactoryPIPnodeCPU.cpp  FactoryPIPnodeRAM.cpp  FactoryPIPnodeSB.cpp  FactoryPIPnodeTBB.cpp  LambertW.cc  Move.cpp  Optimizators.cpp  PIP.cpp  PIPmsa.cpp  PIPnode.cpp  RHomogeneousTreeLikelihood_Generic.cpp  RHomogeneousTreeLikelihood_PIP.cpp  SupportMeasures.cpp  TreeRearrangment.cpp  TreeSearch.cpp  UnifiedDistanceEstimation.cpp  UnifiedPhylogeneticTools.cpp  UnifiedTSHSearchable.cpp  UnifiedTSHTopologySearch.cpp  UnifiedTSHomogeneousTreeLikelihood_Generic.cpp  UnifiedTSHomogeneousTreeLikelihood_PIP.cpp  Utils.cpp  Utree.cpp  inference_indel_rates.cpp  main.cpp  pPIP.cpp  progressivePIP.cpp
tests/: CMakeLists.txt
tests/datasets/: aligned_real_big_codon.fa  aligned_real_gp120big_aa.fa  aligned_real_gp120small_aa.fa  aligned_real_shh300_nt.fa  aligned_real_small_codon.fa  aligned_simulated_big_nt.fa  aligned_simulated_small_nt.fa  minimal_aligned_real_gp120_aa.fa  minimal_aligned_real_shh300_nt.fa  minimal_notaligned_nt.fa  minimal_notaligned_nt.tree.nwk  minimal_notaligned_real_gp120_aa.fa  minimal_notaligned_real_shh300_nt.fa  minimal_notaligned_simulated_nt.fa  notaligned_real_big_codon.fa  notaligned_real_gp120big_aa.fa  notaligned_real_gp120small_aa.fa  notaligned_real_shh300_nt.fa  notaligned_real_small_codon.fa  notaligned_simulated_big_nt.fa  notaligned_simulated_small_nt.fa  pip_lkfunc_dna_5.fa  real_codon.tree.nwk  real_shh300_nt.tree.nwk  simulated_big_nt.tree.nwk  simulated_small_nt.tree.nwk
tests/input/test_01/: conf  seqs.fasta  tree.newick
tests/input/test_02/: conf  pip_lkfunc_tree_5.nwk  seqs.fasta  tree.newick
tests/input/test_03/: conf  minimal_aligned_simulated_nt.fa
tests/input/test_04/: conf
tests/input/test_05/: conf  minimal_aligned_simulated_nt.fa
tests/input/test_06/: conf  minimal_aligned_real_shh300_nt.fa  seqs.fasta
tests/input/test_07/: conf
tests/input/test_09/: seqs.fasta
tests/input/test_10/: conf
tests/output/test_01/: msa.initial.fasta  out_align_pip_likelihood.alignment.initial.fa  out_align_pip_likelihood.estimates.json  tree.nwk
tests/output/test_02/: estimates.json  msa.initial.fasta  out_core_pip_lkfunc.estimates.json
tests/output/test_03/: estimates.json  out_tree.fa
tests/output/test_04/: out_tree.fa  tree.nwk
tests/output/test_05/: estimates.json  msa.initial.fasta
tests/output/test_06/: estimates.json  msa.initial.fasta  out_tree.fa
tests/output/test_07/: estimates.json
tests/output/test_10/: estimates.json  msa.initial.fasta
tests/output/test_12/: msa.initial.fasta
tests/param_files/ALIGN/: pip_alignment_likelihood.txt
tests/param_files/CORE/: pip_likelihoodfunction.txt
tests/param_files/GTR/: nt_real_aligned_optall.txt
tests/param_files/GTR_F/: nt_real_aligned_optall.txt
tests/param_files/GTR_PIP/: nt_real_aligned_optall.txt
tests/param_files/GTR_PIP_F/: nt_real_aligned_optall.txt
tests/scripts/: test_align_pip_likelihood.sh  test_core_pip_lkfunc.sh
tests/trees/: real_gp120big_aa.tree.nwk  real_gp120big_small.tree.nwk
tests/unit_tests/: CMakeLists.txt  tshlib_utree_test.cpp
wiki/: Home.md  Releases.md
wiki/Compiling/: Compiling_aws.md  Compiling_localenv.md  Compiling_sharedenv.md  Index.md
wiki/Developers/: Index.md
wiki/Examples/: Index.md
wiki/Features/: Alphabet.md  Index.md  Logging.md  Optimisations.md
wiki/Features/Optimisation/: Optimisation_NumericalParameters.md
